--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
 
 
-    <p id="bottom">Before leaving we stopped at the Red Car coffee shop for gelato. My mom and I perused the gift shop for some tea to bring back to her friends in Korea. Frank Dad and my wife were deep in conversation outside as they waited for us. I don’t know what they were talking out, but he looked quite happy to be sitting and that was enough for me.</p>
+    <p id="bottom">Before leaving we stopped at the Red Car coffee shop for gelato. My mom and I perused the gift shop for some tea to bring back to her friends in Korea. Frank Dad and my wife were deep in conversation outside as they waited for us. I don’t know what they were talking about, but he looked quite happy to be sitting and that was enough for me.</p>
 
     
   
